--- a/templates/hello4.html
+++ b/templates/hello4.html
@@ -11,6 +11,7 @@
         <img src="{% static "images/ball.png" %}" alt="歡迎光臨" width="32" height="32" />
   	    <span class="info"> 歡迎光臨： {{username}}</span>
         <h2> 現在時刻： {{now}} </h2>
-    </div>   
+        <h2> 字典dict內容： {{key1}} </h2>
+    </div>
 </body>
 </html>
